--- a/src/views/help.hbs
+++ b/src/views/help.hbs
@@ -8,7 +8,7 @@
     </head>
         <body>
             {{>header}}
-           <p>Help Page</p>
+           <p>Need help?</p>
             {{>footer}} 
         </body>
     
