--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -8,7 +8,8 @@
     </head>
         <body>
 {{>header}}           
-            <img src="/img/fd.jpg" alt="photo of me"> <p>Student</p>
+            <img src="https://wi-images.condecdn.net/image/doEYpG6Xd87/crop/405/f/weather.jpg" alt="weather"> 
+            <p>created by Mensi Ghaith. it uses data from mapbox.com and darksky.net</p>
                        {{>footer}}
 
         </body>
